--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@ yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
 
+*.idea
+
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
@@ -39,6 +41,8 @@ build/Release
 
 # Dependency directories
 node_modules/
+**node_modules**
+./app/node_modules
 jspm_packages/
 
 # TypeScript v1 declaration files
